# TestSendImageDifferenceType

./: .gitignore
Client/: DemoCommuniImage.sln
Client/libs/: LogSetting.ini
Client/src/DemoCommuniImage/: App.config  Client.cs  ClientAsyncReceive.cs  DemoCommuniImage.csproj  MainForm.Designer.cs  MainForm.cs  MainFormPresenter.cs  PackageDecoder.cs  Program.cs  RecordTestingResult.cs  RjProtocolPackageDecoder.cs  StateObject.cs
Client/src/DemoCommuniImage/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Server/: CMakeLists.txt  DateTime.h  TcpServer.cpp  TcpServer.h  TimeCounter.cpp  TimeCounter.h  main.cpp
Server/cmake/: FindJpeg.cmake
